Files are renamed; New api get image download added; Fixes and error throws added;
